--- a/user_side/templates/wishlist.html
+++ b/user_side/templates/wishlist.html
@@ -43,7 +43,7 @@
                                 <td>
                                     <div class="media">
                                         <div class="d-flex">
-                                            <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" style="width: 80px;">
+                                         <a href="{% url 'single' item.product.id %}">   <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" style="width: 80px;"></a>
                                         </div>
                                     </div>
                                 </td>
